@@ -24,5 +24,5 @@ public class LGColors {
     public static final Color ERASE_LINES_BUTTON = Color.WHITE;
     public static final Color RESET_ALL_BUTTON = Color.WHITE;
     public static final Color POINT_TOOL_NORMAL_COLOR = Color.WHITE;
-    public static final Color POINT_TOOL_HIGHLIGHT_COLOR = Color.ORANGE;
+    public static final Color POINT_TOOL_HIGHLIGHT_COLOR = new Color( 250, 255, 80 );
 }
