@@ -1,3 +1,5 @@
+4/16/12 try yellow for highlight on point tool, but it conflicts with yellow used elsewhere for intercept
+4/16/12 revert to spinner buttons on right, above/below was deemed to be ugly with poor usability
 4/12/12 delete "interviews" study version from build.properties, it's premature
 # 0.00.06 (63392) Apr 12, 2012
 4/12/12 try spinner buttons above/below numbers, buttons side-by-side
